--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ section#m2 input {
         padding: 5px;
     }
 
-    #menosC2, #med2, #edicaoM2 {
+    #menosC2, #med2, #edicaoM2, button.edicao {
         width: 90px;
         padding: 20px 10px;
     }
@@ -1011,7 +1011,7 @@ section#m2 input {
         min-width: 300px;
     }
 
-    #menosC2, #med2, #edicaoM2 {
+    #menosC2, #med2, #edicaoM2, button.edicao {
         width: 80px;
         padding: 20px 10px;
     }
@@ -1044,7 +1044,7 @@ section#m2 input {
         min-width: 250px;
     }
 
-    #menosC2, #med2, #edicaoM2 {
+    #menosC2, #med2, #edicaoM2, button.edicao {
         width: 70px;
         padding: 15px 10px;
     }
